Fixed reflection method deprecated in newer versions of Java